# cargo-runner

./: .bazelrc  .cargo-runner-v2.json  .cargo-runner.env  .cargo-runner.json.bak  .cargo-runner.v2.json  .gitignore  AGENTS.md  BAZEL_INTEGRATION_CHANGES.md  BAZEL_REDESIGN.md  BUILD.bazel  CARGO_OPTIONS_ANALYSIS.md  CHANGELOG.md  CLAUDE.md  CLI_README.md  CONFIG_REFERENCE.md  Cargo.toml  DESIGN_PROPOSAL.md  LICENSE  MIGRATION_GUIDE.md  MODULE.bazel  Makefile  README.md  REFACTORING_SUMMARY.md  TEST_SUMMARY.md  UNIFIED_CLI_README.md  WORKSPACE_STRUCTURE.md  args-deep-dive.md  argument-passing-analysis.md  cargo-ex.rs  cargo-runner.example.json  cargo-test.md  config-all-combinations.md  config-analyze.md  config-example-complex.json  config-example-simple.json  config-redesign-analysis.md  config-simplification-proposal.md  example-rustc-config-with-jq.json  preferred-config.json  run-test-with-jq.sh  (+40 more)
command_runner/: Cargo.toml  README.md  advanced_plugin_api.rs  cli.rs  core_traits.rs  lib.rs  main_runner.rs  mod.rs  plugin_registry.rs  polyrun.wit  test.sh
command_runner/host/src/: lib.rs
command_runner/plugins/: mod.rs  node_runner.rs  python_runner.rs  rust_runner.rs
command_runner/src/: lib.rs  main.rs
command_runner/test_files/: example.js  example.py  example.rs
crates/cli/: .cargo-runner-v2.json  BUILD.bazel  Cargo.toml  REFACTORING_EXAMPLE.md  REFACTORING_PLAN.md
crates/cli/src/: cli.rs  lib.rs  main.rs
crates/cli/src/assets/: AGENTS.cargo-runner.md
crates/cli/src/assets/nvim-plugin/: README.md
crates/cli/src/assets/nvim-plugin/doc/: cargo-runner.txt
crates/cli/src/assets/nvim-plugin/lua/cargo_runner/: config.lua  job.lua  kind.lua  override.lua  progress.lua  run.lua
crates/cli/src/assets/nvim-plugin/lua/cargo_runner/ui/: error_float.lua  hud.lua  peek.lua
crates/cli/src/assets/nvim-plugin/plugin/: cargo-runner.lua
crates/cli/src/commands/: agent_init.rs  analyze.rs  bazel_add.rs  bazel_sync.rs  build_sync.rs  clean.rs  context.rs  doctor.rs  editor_install.rs  init.rs  matching.rs  mod.rs  override_cmd.rs  run.rs  unset.rs  watch.rs  workspace.rs
crates/cli/src/commands/analyze/: filters.rs  mod.rs  print_human.rs  print_json.rs
crates/cli/src/config/: bazel_workspace.rs  generators.rs  mod.rs  templates.rs  v2_generators.rs  workspace.rs
crates/cli/src/display/: command_breakdown.rs  formatter.rs  ide_json.rs  mod.rs  override_display.rs  style.rs
crates/cli/src/utils/: file.rs  mod.rs  parser.rs  path.rs
crates/cli/tests/: cli_integration.rs
crates/core/: BUILD.bazel  Cargo.toml
crates/core/examples/: download_to_path.rs  find.rs  get_set_defaults.rs  init.rs  merge.rs  pluck.rs  reset.rs
crates/core/src/: error.rs  errors.rs  lib.rs  runner.rs
crates/core/src/bazel/: debug_integration_test.rs  integration_server_test.rs  integration_test.rs  mod.rs  rule_extractor.rs  starlark_parser.rs  target_analyzer.rs  target_finder.rs
crates/core/src/bazel/rules/: cargo_build_script.rs  mod.rs  rust_benchmark.rs  rust_binary.rs  rust_doc_test.rs  rust_library.rs  rust_test.rs  rust_test_suite.rs
crates/core/src/build_system/: bazel.rs  cargo.rs  mod.rs
crates/core/src/cache/: mod.rs  runnable_cache.rs
crates/core/src/command/: builder.rs  builder_v2.rs  cargo_command.rs  command.rs  fallback.rs  mod.rs  target.rs
crates/core/src/command/builder/: config_access.rs  config_resolver.rs  mod.rs
crates/core/src/command/builder/bazel/: bazel_builder.rs  bazel_builder_test.rs  benchmark_builder.rs  binary_builder.rs  doctest_builder.rs  mod.rs  target_detection.rs  test_builder.rs
crates/core/src/command/builder/cargo/: benchmark_builder.rs  binary_builder.rs  common.rs  doctest_builder.rs  mod.rs  module_test_builder.rs  test_builder.rs
crates/core/src/command/builder/rustc/: mod.rs  rustc_builder.rs  single_file_script_builder.rs
crates/core/src/command/resolver/: bench.rs  bin.rs  example.rs  integration.rs  lib_src.rs  mod.rs
crates/core/src/command/target_builder/: doc_test.rs  mod.rs  test.rs
crates/core/src/command/template/: mod.rs  parser.rs  renderer.rs
crates/core/src/config/: bazel_config.rs  cargo_config.rs  config.rs  features.rs  merge.rs  mod.rs  override_config.rs  override_manager.rs  plugin_policy.rs  rustc_config.rs  settings.rs  test_framework.rs  utils.rs  validation.rs
crates/core/src/config/v2/: builder.rs  case_insensitive_test.rs  helpers.rs  integration_tests.rs  json.rs  layer.rs  loader.rs  mod.rs  registry.rs  resolver.rs  scope.rs  simple_loader.rs  strategy.rs  target_detection.rs  target_selection_v2.rs  v1_compat.rs  v2_config_test.rs
crates/core/src/entities/: cargo_runner.rs  config.rs
crates/core/src/interfaces/: mod.rs  module_resolver.rs  path_resolver.rs  plugin.rs  runnable_detector.rs  target_selection.rs
crates/core/src/parser/: mod.rs  module_resolver.rs  rust_parser.rs  scope_detector.rs  utils.rs
crates/core/src/patterns/: benchmark.rs  binary.rs  detector.rs  doc_test.rs  mod.rs  mod_test.rs  pattern.rs  test_fn.rs
crates/core/src/plugins/: analyzer.rs  builtins.rs  command_spec.rs  context.rs  custom.rs  mod.rs  registry.rs  target_ref.rs
crates/core/src/runner_v2/: bazel_runner.rs  builder.rs  cargo_runner.rs  framework.rs  mod.rs  options.rs  rustc_runner.rs  traits.rs  unified_runner.rs  validation.rs
crates/core/src/runners/: bazel_runner.rs  builder.rs  cargo_runner.rs  common.rs  composable_runner.rs  framework.rs  mod.rs  rustc_runner.rs  traits.rs  unified_runner.rs  validation.rs
crates/core/src/runners/unified_runner/: build_system_detector.rs  file_command.rs  mod.rs  project_command.rs
crates/core/src/services/: default_path_resolver.rs  file_target_selector.rs  mod.rs  pattern_runnable_detector.rs  treesitter_module_resolver.rs
crates/core/src/types/: function_identity.rs  mod.rs  position.rs  runnable.rs  scope.rs  scope_kind.rs
crates/core/src/utils/: file_type.rs  mod.rs  serde_helpers.rs
docs/: AGENTS.cargo-runner.md  ARCHITECTURE.md  CONFIG_MERGING.md  DIRECTORY_TRAVERSAL.md  OVERRIDE_GUIDE.md  ide-protocol.md  limitations.md  (+3 more)
(+124 files in other folders)
