# MODULE.bazel — cargo-runner
module(name = "cargo-runner")

bazel_dep(name = "rules_rust", version = "0.69.0")

# ── Rust toolchain ────────────────────────────────────────────────────────────
# rules_rust 0.69.0 maps all explicit stable versions to the same __stable
# channel download (Rust 1.86.0). Nightly is the only way to get a newer
# compiler. We pin nightly/2025-07-01 (Rust 1.90-nightly, post let_chains)
# and enable the feature gate in lib.rs / main.rs.
rust = use_extension("@rules_rust//rust:extensions.bzl", "rust")
rust.toolchain(
    edition = "2021",
    versions = ["nightly/2025-07-01"],
)
use_repo(rust, "rust_toolchains")
register_toolchains("@rust_toolchains//:all")



# ── Crate universe (external crates from Cargo.lock) ─────────────────────────
crate = use_extension(
    "@rules_rust//crate_universe:extensions.bzl",
    "crate",
)

crate.from_cargo(
    name = "cargo_runner_crates",
    manifests = [
        "//:Cargo.toml",
        "//crates/cli:Cargo.toml",
        "//crates/core:Cargo.toml",
    ],
    cargo_lockfile = "//:Cargo.lock",
)

use_repo(crate, "cargo_runner_crates")
