# MODULE.bazel — cargo-runner
module(name = "cargo-runner")

bazel_dep(name = "rules_rust", version = "0.69.0")

# ── Rust toolchain ────────────────────────────────────────────────────────────
# Pin to 1.88.0 — the version that stabilized let_chains (June 2025).
# rules_rust downloads this directly from static.rust-lang.org.
rust = use_extension("@rules_rust//rust:extensions.bzl", "rust")
rust.toolchain(
    edition = "2024",
    versions = ["1.88.0"],
)
use_repo(rust, "rust_toolchains")
register_toolchains("@rust_toolchains//:all")



# ── Crate universe (external crates from Cargo.lock) ─────────────────────────
crate = use_extension(
    "@rules_rust//crate_universe:extensions.bzl",
    "crate",
)

crate.from_cargo(
    name = "cargo_runner_crates",
    manifests = [
        "//:Cargo.toml",
        "//crates/cli:Cargo.toml",
        "//crates/core:Cargo.toml",
    ],
    cargo_lockfile = "//:Cargo.lock",
)

use_repo(crate, "cargo_runner_crates")
