[package]
name = "command-runner"
version = "0.1.0"
edition = "2021"
authors = ["Universal Runner Team"]
description = "Language-agnostic command runner framework"
license = "MIT OR Apache-2.0"
repository = "https://github.com/command-runner/command-runner"
keywords = ["runner", "testing", "cli", "development", "multi-language"]
categories = ["command-line-utilities", "development-tools"]

[lib]
name = "command_runner"

[[bin]]
name = "runner"
path = "src/main.rs"

[dependencies]
# Core dependencies
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
anyhow = "1.0"

# Plugin system
wasmtime = { version = "15.0", optional = true }
wasmtime-wasi = { version = "15.0", optional = true }

# File system
walkdir = "2.4"
glob = "0.3"
dirs = "5.0"

# CLI dependencies (not optional for now)
clap = { version = "4.4", features = ["derive"] }
colored = { version = "2.0", optional = true }

# Async runtime (for future use)
tokio = { version = "1.35", features = ["full"], optional = true }

# Parsing
toml = "0.8"
once_cell = "1.19"

# Utilities
indexmap = "2.1"
lru = "0.12"

[dev-dependencies]
tempfile = "3.8"
pretty_assertions = "1.4"
criterion = "0.5"
insta = "1.34"

[features]
default = []
wasm = ["wasmtime", "wasmtime-wasi"]
async = ["tokio"]
all-plugins = []  # Build with all language plugins

# Plugin features
plugin-rust = []
plugin-python = []
plugin-javascript = []
plugin-go = []
plugin-java = []

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true

[profile.wasm]
inherits = "release"
opt-level = "z"  # Optimize for size
panic = "abort"

# Empty workspace to make this project independent from parent workspace
[workspace]

# Note: Plugins will be separate projects in the future
# For now, everything is in a single crate for simplicity