[package]
name = "cargo-runner"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[lib]
name = "cargo_runner"
path = "src/lib.rs"

[[bin]]
name = "cargo-runner"
path = "src/main.rs"

[dependencies]
cargo-runner-core = { path = "../core" }
anyhow = { workspace = true }
clap = { version = "4.5", features = ["derive", "cargo"] }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
walkdir = "2.5"