[package]
name = "cargo-runner-cli"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description.workspace = true
keywords.workspace = true
categories.workspace = true
readme = "../../README.md"

[lib]
name = "cargo_runner"
path = "src/lib.rs"

[[bin]]
name = "cargo-runner"
path = "src/main.rs"

[dependencies]
cargo-runner-core = { version = "0.2.0", path = "../core" }
anyhow = { workspace = true }
clap = { version = "4.5", features = ["derive", "cargo"] }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
walkdir = "2.5"
regex = "1"
notify = "6"
toml = "0.8"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile = "3"

[package.metadata.binstall]
pkg-url = "{ repo }/releases/download/cargo-runner-cli-v{ version }/{ name }-{ target }-v{ version }.{ archive-format }"
bin-dir = "{ name }-{ target }-v{ version }/{ bin }{ binary-ext }"
pkg-fmt = "tgz"
