[package]
name = "cargo-runner-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
tree-sitter = { workspace = true }
tree-sitter-rust = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
md5 = { workspace = true }
cargo_toml = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
insta = "1.41"
tempfile = "3.14"